[gd_scene load_steps=2 format=3 uid="uid://bqr413g1o7ox5"]

[ext_resource type="Script" path="res://scripts/ship.gd" id="1_6xv5e"]

[node name="ship_root" type="Area3D"]
script = ExtResource("1_6xv5e")

[node name="drag_timer" type="Timer" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
